// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HomeBody /> renders a loading state for images 1`] = `<styled.div />`;

exports[`<HomeBody /> renders a loading state for works 1`] = `<styled.div />`;

exports[`<HomeBody /> renders correctly 1`] = `
<div>
  <Hero
    image={
      Object {
        "height": 100,
        "title": "title",
        "url": "https://url.com",
        "width": 100,
      }
    }
    work={
      Object {
        "featured": true,
        "hero": true,
        "images": Array [
          "imageId",
        ],
        "published": "10-01-2010",
        "slug": "slug",
        "summary": "summary",
        "thumbnail": "imageId",
        "title": "title",
        "type": "type",
      }
    }
  />
  <styled.div
    center={false}
    color="unset"
    margin="var(--size-larger) 0 var(--size-larger) 0"
    size="unset"
  >
    <TitleFactory
      center={false}
      margin="unset"
      size="1rem"
      tag="h2"
    >
      Hi there
    </TitleFactory>
    <p>
      I'm an artist, a social scientist and a software engineer. My work is a combination of the most inspiring parts of those disciplines and an expression of everything that interests, moves or inspires me.
    </p>
    <styled.div
      center={true}
      color="unset"
      margin="unset"
      size="unset"
    >
      <Link
        size="var(--size-small)"
        to="/about"
      >
        Learn more
      </Link>
    </styled.div>
  </styled.div>
  <styled.div
    center={false}
    color="unset"
    margin="var(--size-larger) 0 0 0"
    size="unset"
  >
    <TitleWithLineFactory
      center={false}
      margin="unset"
      size="var(--size-small)"
      tag="h2"
    >
      Featured work
    </TitleWithLineFactory>
    <styled.div
      center={false}
      color="unset"
      margin="var(--size-regular) 0 var(--size-regular) 0"
      size="unset"
    >
      <styled.div>
        <Thumbnail
          image={
            Object {
              "height": 100,
              "title": "title",
              "url": "https://url.com",
              "width": 100,
            }
          }
          work={
            Object {
              "featured": true,
              "hero": true,
              "images": Array [
                "imageId",
              ],
              "published": "10-01-2010",
              "slug": "slug",
              "summary": "summary",
              "thumbnail": "imageId",
              "title": "title",
              "type": "type",
            }
          }
        />
      </styled.div>
    </styled.div>
    <styled.div
      center={true}
      color="unset"
      margin="unset"
      size="unset"
    >
      <Link
        size="var(--size-small)"
        to="/work"
      >
        See all work
      </Link>
    </styled.div>
  </styled.div>
</div>
`;

exports[`<HomeBody /> renders image errors 1`] = `
<AppError
  errorMessage="Error while fetching images"
/>
`;

exports[`<HomeBody /> renders work errors 1`] = `
<AppError
  errorMessage="Error while fetching works"
/>
`;
